--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,519 @@
+/* Custom Fonts */
+  /* Sage Logo Font - font-family: 'koblenz-serial-bold', sans-serif; */
+    @import url('https://www.dafontfree.net/embed/a29ibGVuei1zZXJpYWwtYm9sZCZkYXRhLzMzL2svMTQ3OTQ4L2tvYmxlbnotc2VyaWFsLWJvbGQudHRm');
+  /* Main text font - font-family: 'Montserrat', sans-serif; */
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+    
+/* Universal Style Classes */
+.glass {
+  padding: .5em;
+  
+  background: rgba(255, 255, 255, 0.13);
+  color: white;
+
+  border: 1px solid rgba(255, 255, 255, 0.24);
+  border-radius: 20px;
+}
+
+
 .App {
+  display: flex;
+  flex-direction: column;
+  
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Nav Bar */
+nav {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+  max-height: 7vh;
+
+  color: black;
+  background-color: rgba(255, 255, 255, 0);
+
+  /* border: 2px solid pink; */
+}
+nav .nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+
+  width: 90vw;
+  max-height: 100%;
+
+  /* border: 2px solid red; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+nav .logo {
+  width: 7vw;
+  height: 7vh;
+
+  background-image: url('./pages/assets/sage-logo.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  overflow: hidden;
+
+  margin-top: 1vh;
+  margin-left: 5vw;
+}
+
+nav .nav-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 4vw;
+
+  list-style-type: none;
+
+  /* border: 1px solid blue */
+}
+
+nav .nav-links li {
+  margin: 0 1em;
+  padding: 0.5em;
+  
+  text-decoration: none;
+
+  /* border: 2px solid green; */
+}
+
+.default-link {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+.default-link:hover {
+  color: #00000088;
+}
+
+/* Hero Image */
+.hero-image-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+
+  height: 100vh;
+  max-height: 100vh;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+  overflow-y: initial;
+
+  /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
+  background-image: url('./pages/assets/hero-eighteen.svg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+
+  /* border: 2px solid blue */
+}
+
+.hero-background-window {
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+
+  position: absolute;
+
+  background: rgba(255, 255, 255, 0.349);
+  backdrop-filter: blur( 15px );
+  -webkit-backdrop-filter: blur( 15px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+
+.hero-image-content-top {
+  z-index: 1;
+  width: 90%;
+  
+  /* border: 1px solid pink; */
+}
+
+.hero-image-content-bottom {
+  display: flex;
+  justify-content: flex-start;
+  z-index: 1;
+  
+  width: 90%;
+
+  margin-top: 10vh;
+
+  /* border: 1px solid pink; */
+}
+
+.hero-image-content-left {
+  display: flex;
+  flex-direction: column;
+  
+  width: 60%;
+  
+}
+
+
+.hero-image-content-left .title {
+  margin-top: 10vh;
+  margin-left: 3vw;
+
+  font-size: 4em;
+  text-align: left;
+  line-height: 0em;
+}
+
+.title-top {
+  position: relative;
+  margin-left: 3vw;
+}
+
+.title span {
+  color: rgb(255, 133, 133);
+}
+
+.title-top span .wings {
+  background-image: url("./pages/assets/logo-red-wings.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+
+  height: 10vh;
+  width: 6vw;
+
+  position: absolute;
+  margin-left: 29vw;
+  margin-top: -8vh;
+  z-index: -1;
+
+  /* border: 1px solid black; */
+}
+
+.hero-image-content-left .title-tagline {
+  margin-top: 4vh;
+  margin-left: 1vw;
+  text-align: left;
+}
+
+.hero-image-content-left button {
+  background-color: rgba(253, 253, 253, 0);
+  border: 1px solid black;
+  border-radius: 20px;
+  box-sizing: border-box;
+  color: #000000;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 30%;
+  min-width: 140px;
+  padding: 15px 24px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  margin-top: 6vh;
+  margin-left: 16vw;
+}
+
+.hero-image-content-left button:hover {
+  background-color: white;
+
+  transition: 2s;
+}
+
+.hero-image-content-right {
+  display: flex;
+  z-index: 1;
+  margin-top: -10vh;
+  overflow: hidden;
+
+  width: 40%;
+  height: 90vh;
+
+  /* border: 1px solid red; */
+}
+
+.hero-image-content-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  width: 40%;
+  margin-left: 2vw;
+  margin-right: 2vw;
+
+  /* border: 1px solid black; */
+}
+
+.hero-image-cards {
+  width: 75%;
+  height: 70%;
+
+  margin-top: 8vh;
+  margin-left: 5vw;
+  overflow-y: scroll;
+
+  /* border: 2px solid blue; */
+}
+
+.hero-image-cards::-webkit-scrollbar {
+  display: none;
+}
+
+.hero-card-large {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  
+  height: 30vh;
+  margin-top: 2vh;
+  
+  
+  background: rgba( 255, 255, 255, 0.95 );
+  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+  backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.hero-card-medium {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+
+  height: 20vh;
+  margin-top: 2vh;
+  
+  background: rgba( 255, 255, 255, 0.55 );
+  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+  backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.hero-card-small {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 10vh;
+  margin-top: 2vh;
+
+  background: rgba( 255, 255, 255, 0.3 );
+  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+  backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.hero-image-content-right p {
+  width: 50%;
+  padding: 1vh 2vw;
+
+  border: 1px solid rgba(255, 255, 255, 0.623);
+  border-radius: 10px;
+  
+  background-color: rgba(255, 255, 255, 0.349);
+}
+
+.large-one {
+  background-image: url("./pages/assets/hero-twelve.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.large-two {
+  background-image: url("./pages/assets/large-two.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.large-three {
+  background-image: url("./pages/assets/large-three.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.medium-one {
+  background-image: url("./pages/assets/medium-one.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.medium-two {
+  background-image: url("./pages/assets/medium-two.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.small-one {
+  background-image: url("./pages/assets/small-one.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+.small-two {
+  background-image: url("./pages/assets/small-two.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
+}
+
+
+
+
+/* Homepage Contact */
+.contact-mini {
+  height: 40vh;
+
+  background:rgba(226, 226, 226, 0.685);
+}
+
+
+/* Footer */
+
+/* Defining animations for footer using keyframes */
+@keyframes fly {
+  100% {
+    transform:rotate(1turn) translate(100px) rotate(-1turn);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@keyframes flyPlus {
+  100% {
+    transform:rotate(-1turn) translate(100px) rotate(1turn);
+  }
+}
+
+.footer-container {
+  width: 100vw;
+  height: 50vh;
+  background: rgb(60, 145, 214);
+  position: relative;
+  overflow: hidden;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  
+  /* border: 1px solid green; */
+  z-index: 0;
+}
+
+.footer-content {
+  height: 70%;
+  width: 70%;
+  
+  position:relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 3vh 10vw 3vh 10vw;
+  padding: 3vh 2vw 3vh 2vw;
+
+  z-index: 4;
+
+  /* border: 1px solid white; */
+}
+
+.footer-logo {
+  background-image: url('./pages/assets/sage-logo-two.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  overflow: hidden;
+
+  height: 4vh;
+}
+
+.basic-details {
+  margin-top: 3vh;
+}
+
+.address {
+  
+  line-height: .2em;
+}
+
+.footer-details {
+  height: 5vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  
+  position: relative;
+  z-index: 4;
+
+  background: rgba(255, 255, 255, 0.274);
+  color: white;
+  font-size: .7em;
+
+  border-top: 1px solid rgba(255, 255, 255, 0.315);
+}
+
+/* About Page */
+.about-page-container {
+  height: auto;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+}
+
+.team-container {
+  width: 80%;
+
+  /* border: 2px solid pink; */
+
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+
+  z-index: 10;
 }
 
-.App-link {
-  color: #61dafb;
+.team-member-card {
+  height: 40vh;
+  width: 20vw;
+  overflow: hidden;
+
+  margin: 1em;
+
+  /* border: 1px solid black; */
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.team-member-card .team-member-photo {
+  height: auto;
+  width: 100%;
 }
